# matriz-client

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Primary-API.md  README.md  keys.py  main.py  main_ws.py  primary_api_llm.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: auto-merge.yml  ci.yml  release.yml
matriz-vault/: HOME.md
matriz-vault/.obsidian/: workspace.json
matriz-vault/.obsidian/plugins/templater-obsidian/: data.json
matriz-vault/daily-logs/: 2026-04-16.md  2026-04-17.md  README.md
matriz-vault/knowledge/architecture/: README.md
matriz-vault/knowledge/devops/: README.md
matriz-vault/knowledge/python/: README.md
matriz-vault/knowledge/tools/: Claude Code — CLAUDE.md best practices.md  Obsidian — Este vault.md  README.md
matriz-vault/projects/_templates/: tpl-adr.md  tpl-claude-md.md  tpl-daily-log.md  tpl-linear-issue.md  tpl-retrospectiva.md  tpl-runbook.md
matriz-vault/projects/matriz-client/: README.md
matriz-vault/projects/matriz-client/decisions/: ADR-001 — GET para todo.md  ADR-002 — Safe-access dataclasses sobre Pydantic.md
matriz-vault/projects/matriz-client/domain/: Conceptos Primary API.md  Segmentos de mercado.md  Wire format y keys opcionales.md
matriz-vault/projects/matriz-client/runbooks/: Cortar un release.md  Setup desde cero.md
matriz-vault/retrospectives/: README.md
matriz-vault/workflows/: Workflow de desarrollo.md
matriz_client/: __init__.py  client.py  exceptions.py  models.py  types.py  ws_client.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_models.py  test_types.py  test_ws_client.py
utils/: time_cached.py
