[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matriz-client"
version = "0.1.0"
description = "Python client for the MATBA ROFEX Primary API v1.21 (REST + WebSocket)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Sebastián de la Fuente", email = "sebadlf@gmail.com" },
]
keywords = [
    "matba-rofex",
    "primary-api",
    "trading",
    "argentina",
    "derivatives",
    "websocket",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "websocket-client>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/sebadlf/matriz-client"
Repository = "https://github.com/sebadlf/matriz-client"
Issues = "https://github.com/sebadlf/matriz-client/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.380",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["matriz_client"]

[tool.hatch.build.targets.sdist]
include = [
    "matriz_client",
    "README.md",
    "LICENSE",
    "primary_api_llm.md",
    "pyproject.toml",
]
exclude = [
    "matriz-vault",
    "tests",
    "utils",
    ".github",
    ".claude",
    "main*.py",
    "keys.py",
    "Primary-API.*",
    "*.ipynb",
    ".env*",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.pyright]
include = ["matriz_client", "tests"]
exclude = [".venv", "matriz-vault", "__pycache__", "utils"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = "none"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "matriz-vault"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Pydantic models mirror the Primary API wire format (camelCase) verbatim.
"matriz_client/models.py" = ["N815"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
